[add] add Commands
コマンドの追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: "${project.groupId}.Main"
 author: 'erudo'
 api-version: 1.13
 depend: [Multiverse-Core,Multiverse-Portals,WorldEdit]
+commands:
+    emw:
+      description: EMine-World command
