[update] update SchedulerTask
SchedulerTaskに日付判定の追加

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+        <repository>
+            <id>onarandombox</id>
+            <url>http://repo.onarandombox.com/content/groups/public</url>
+        </repository>
     </repositories>
     <dependencies>
         <!--Spigot API -->
@@ -43,6 +47,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.onarandombox.multiversecore</groupId>
+            <artifactId>Multiverse-Core</artifactId>
+            <version>4.2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
