--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: "${project.version}"
 main: "${project.groupId}.Main"
 author: 'erudo'
 api-version: 1.13
-depend: [Multiverse-Core,Multiverse-Portals,WorldEdit]
+depend: [Multiverse-Core,Multiverse-Portals]
 commands:
     emw:
       description: EMine-World command
